[gd_scene load_steps=4 format=3 uid="uid://uuy3ruaxplwy"]

[ext_resource type="Script" path="res://GameObjects/Light.gd" id="1_3f7l6"]
[ext_resource type="Texture2D" uid="uid://csllib2c1x0wg" path="res://GameAssets/Lighting/light.png" id="2_2cwsh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltwyl"]

[node name="Light" type="Node2D"]
script = ExtResource("1_3f7l6")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(25, -112)
shadow_enabled = true
texture = ExtResource("2_2cwsh")

[node name="LightSwitch" type="Area2D" parent="."]
position = Vector2(-63, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightSwitch"]
shape = SubResource("RectangleShape2D_ltwyl")

[connection signal="area_entered" from="LightSwitch" to="." method="_on_light_switch_area_entered"]
[connection signal="area_exited" from="LightSwitch" to="." method="_on_light_switch_area_exited"]
